force-app/main/default/objects/User/fields/Assesment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Assesment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>“Assessment Complete” checkbox is set to true, sends and e-mail notification to the corresponding user.</description>
    <label>Assesment Complete</label>
    <type>Checkbox</type>
</CustomField>