force-app/main/default/objects/User/fields/Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores the status of the assessment.</description>
    <inlineHelpText>Mark this field whrn the assessment is completed.</inlineHelpText>
    <label>Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>