force-app/main/default/objects/User/fields/Date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_completion__c</fullName>
    <formula>IF( Assessment_Complete__c = True, TEXT(TODAY()), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check if the Assessment Complete field is set to true then set today&apos;s date.</inlineHelpText>
    <label>Date of completion</label>
    <type>Text</type>
</CustomField>