force-app/main/default/objects/User/fields/Github_Repository__c.field-meta.xml
<CustomField>
    <fullName>Github_Repository__c</fullName>
    <label>Github Repository</label>
    <type>Url</type>
</CustomField>