force-app/main/default/objects/User/fields/GitHub_repository_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_repository_URL__c</fullName>
    <label>GitHub repository URL</label>
    <type>Url</type>
</CustomField>