force-app/main/default/objects/User/fields/Solution_Time__c.field-meta.xml
<CustomField>
    <fullName>Solution_Time__c</fullName>
    <label>Solution Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>