force-app/main/default/objects/User/fields/Time_Used__c.field-meta.xml
<CustomField>
    <fullName>Time_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Insert Spent Time in Hours</inlineHelpText>
    <label>Time Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>